--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -32,11 +32,11 @@ jobs:
       # # Construye el backend
       # - name: Build backend
       #   run: yarn build:backend
-      - name: Print GHCR_TOKEN (unsafe, for debugging only)
-        run: echo "${{ secrets.GHCR_TOKEN }}"
+      - name: Print GHCR_TOKENY (unsafe, for debugging only)
+        run: echo "${{ secrets.GHCR_TOKENY }}"
       # Inicia sesión en GHCR
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GHCR_TOKENY }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       # # Construye y etiqueta la imagen Docker
       # - name: Build Docker Image
